# xgb-hrp

./: .gitignore  .gitmodules  MEMORY.md  README.md  SPEC.md  app.py  pyproject.toml  run_pipeline.py
.claude/: launch.json
pipeline/: __init__.py  _pools.py  _vendor.py  _walk_forward.py  allocator.py  charts.py  cockpit.py  config.py  data.py  executor.py  forecast.py  indicators.py  performance.py  regime.py  regime_quality.py  risk_monitor.py  selector.py
pipeline/eval/: __init__.py  _base.py  allocator_eval.py  data_eval.py  e2e_eval.py  executor_eval.py  risk_eval.py
pipeline/templates/: regime_cockpit.html
scripts/: compare_rules.py  sweep_rules.py
tests/: conftest.py  test_allocator.py  test_compare_rules.py  test_config.py  test_data.py  test_eval.py  test_executor.py  test_forecast.py  test_indicators.py  test_ledger.py  test_performance.py  test_regime.py  test_regime_quality.py  test_risk_monitor.py  test_selector.py
