[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xgb-hrp"
version = "0.1.0"
description = "End-to-end quant pipeline fusing JM/XGBoost regime forecasting with HRP allocation"
readme = "SPEC.md"
requires-python = ">=3.11"
authors = [{name = "Paul", email = "pvivant@gmail.com"}]

dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.3,<3",
    "scipy>=1.13,<2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10",
    "joblib>=1.4",
    "pydantic>=2.7",
    "pyarrow>=17",
    "tabulate>=0.9",
    "plotly>=6.0",
    "streamlit>=1.40",
    "matplotlib>=3.8",
    "shap>=0.46",
    "fpdf2>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
    "ruff>=0.6",
    "py-spy>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]
exclude = ["vendor*", "tests*", "cache*", "benchmarks*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
